Fixed chart display on mobile
Everything is looking good :)

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -40,6 +40,9 @@
   }
   .chart-container {
     margin-top: 15px !important;
+    width     : 100% !important;
+    text-align: center;
+    float     : none !important;
   }
   .progress-container {
     margin-left: 0 !important;
@@ -47,7 +50,6 @@
     .progress {
       height       : 17px !important;
       margin-bottom: 22px !important;
-      max-width    : 191px !important;
     }
   }
   .hero-unit {
@@ -114,9 +116,6 @@
     .input-box {
       width: 100%;
     }
-    .logo {
-      margin-top: 36px;
-    }
   }
   footer {
     font-size: 12px;
@@ -132,6 +131,9 @@
   }
   .chart-container {
     margin-top: 15px !important;
+    width     : 100% !important;
+    text-align: center;
+    float     : none !important;
   }
   .progress-container {
     margin-left: 0 !important;
@@ -139,7 +141,6 @@
     .progress {
       height       : 17px !important;
       margin-bottom: 17px !important;
-      max-width    : 145px !important;
     }
   }
   .hero-unit {
@@ -249,6 +250,9 @@
   }
   .chart-container {
     margin-top: 15px !important;
+    width     : 100% !important;
+    text-align: center;
+    float     : none !important;
   }
   .progress-container {
     margin-left: 0 !important;
@@ -256,7 +260,6 @@
     .progress {
       height       : 17px !important;
       margin-bottom: 10px !important;
-      max-width    : 145px !important;
     }
   }
   .hero-unit {
